--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,13 @@ ALPACA_PAPER_SECRET_KEY=your_paper_secret_key_here
 ALPACA_LIVE_API_KEY=your_live_api_key_here
 ALPACA_LIVE_SECRET_KEY=your_live_secret_key_here
 
-# Polygon API Key (for market data)
+# Market Data API Keys
 POLYGON_API_KEY=your_polygon_api_key_here
+EODHD_API_KEY=your_eodhd_api_key_here
+
+# Database Configuration
+DB_URL=postgresql://user:password@host:port/database
+DB_SCHEMA=trading
 
 # XAI API Key (for AI Assistant)
 XAI_API_KEY=your_xai_api_key_here
-
-# Database Configuration (optional)
-DATABASE_URL=postgresql://user:password@localhost:5432/strategy_simulator
